--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "*.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "app.js"
     }
   ]
 }
