Update Vercel configuration for version 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "",
-  "outputDirectory": ".",
-  "routes": [
+  "version": 2,
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "*.js",
+      "use": "@vercel/node"
     }
   ]
 }
