Modify MONGO_URI in .env file
Updated MONGO_URI to use new format and removed database name.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://toast_db_user:Toast12345@toast.5eozucr.mongodb.net/toastdb?retryWrites=true&w=majority
+mongodb+srv://toast_db_user:<Toast12345>@toast.5eozucr.mongodb.net/?appName=toast
