--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toast",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -23,3 +23,4 @@
     "sql": "^0.78.0"
   }
 }
+
