--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=MONmongodb+srv://toast_db_user:Toast12345@toast.5eozucr.mongodb.net/?appName=toast
+MONGODB_URI=mongodb+srv://toast_db_user:Toast12345@toast.5eozucr.mongodb.net/?appName=toast
