--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "toast",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+}
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,4 +23,5 @@
     "sql": "^0.78.0"
   }
 }
+
 
